# lib-orig

./: CMakeLists.txt  README.md  build.sh
cmake/: ExternalMylibExtended.cmake  mylib-config.cmake
examples/: CMakeLists.txt  build.sh  main.cpp
include/: mylib.h
src/: mylib.cpp
